unpackaged/main/default/objects/Asset/fields/Access_Circuit__c.field-meta.xml
<CustomField>
    <fullName>Access_Circuit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>02/11 SH: Used as part of Access Circuit transition to Assets</description>
    <label>Access Circuit</label>
    <type>Checkbox</type>
</CustomField>