unpackaged/main/default/objects/Asset/fields/Account_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Account_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>9/4 - SH</description>
    <label>Account Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>