unpackaged/main/default/objects/Asset/fields/AcctSeedERP__Sales_Order_Inventory_Movement__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Sales_Order_Inventory_Movement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Order Inventory Movement</label>
    <referenceTo>AcctSeedERP__Sales_Order_Inventory_Movement__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>