unpackaged/main/default/objects/Asset/fields/AcctSeedERP__Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Serial_Number__c</fullName>
    <formula>AcctSeedERP__Sales_Order_Inventory_Movement__r.AcctSeedERP__Serial_Number__c</formula>
    <label>Serial Number</label>
    <type>Text</type>
</CustomField>