unpackaged/main/default/objects/Asset/fields/Application_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_Record_ID__c</fullName>
    <description>Application Record ID</description>
    <inlineHelpText>The ID of a software container record used by software manufacturers.</inlineHelpText>
    <label>Application Record ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>