unpackaged/main/default/objects/Asset/fields/Asset_Category__c.field-meta.xml
<CustomField>
    <fullName>Asset_Category__c</fullName>
    <formula>TEXT(Product2.Product_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Category</label>
    <type>Text</type>
</CustomField>