unpackaged/main/default/objects/Asset/fields/Bill_Payment_Warning_Flag__c.field-meta.xml
<CustomField>
    <fullName>Bill_Payment_Warning_Flag__c</fullName>
    <formula>TODAY() -  Last_Payment_Date__c &gt;= 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Payment Warning Flag</label>
    <type>Checkbox</type>
</CustomField>