unpackaged/main/default/objects/Asset/fields/Carrier_Date_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Date_Assigned__c</fullName>
    <label>Carrier Date Assigned</label>
    <type>Date</type>
</CustomField>