unpackaged/main/default/objects/Asset/fields/Circuit_Locality__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Locality__c</fullName>
    <description>9/10 SH: Created for Access Circuit data transfer.</description>
    <label>Circuit Locality</label>
    <length>50</length>
    <type>Text</type>
</CustomField>