unpackaged/main/default/objects/Asset/fields/Circuit_Type__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Type__c</fullName>
    <description>9/10 SH: Created for Access Circuit transfer.</description>
    <label>Circuit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cable Modem</fullName>
            </value>
            <value>
                <fullName>DSL</fullName>
            </value>
            <value>
                <fullName>T1 Internet</fullName>
            </value>
            <value>
                <fullName>T1 IP/VPN</fullName>
            </value>
            <value>
                <fullName>Metro Fiber Internet</fullName>
            </value>
            <value>
                <fullName>Metro Fiber IP/VPN</fullName>
            </value>
            <value>
                <fullName>Local DID</fullName>
            </value>
            <value>
                <fullName>Toll Free DID</fullName>
            </value>
            <value>
                <fullName>POTS Line</fullName>
            </value>
            <value>
                <fullName>eFax</fullName>
            </value>
            <value>
                <fullName>FaxLync</fullName>
            </value>
            <value>
                <fullName>T1 PRI</fullName>
            </value>
            <value>
                <fullName>International DID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>