unpackaged/main/default/objects/Asset/fields/CName__c.field-meta.xml
<CustomField>
    <fullName>CName__c</fullName>
    <description>9/10 SH: Created for Access Circuit transfer.</description>
    <label>CName</label>
    <length>24</length>
    <type>Text</type>
</CustomField>