unpackaged/main/default/objects/Asset/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>9/10 SH - Added for Asset Conversion for Access Circuits</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>