unpackaged/main/default/objects/Asset/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <formula>Product2.Product_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>