unpackaged/main/default/objects/Asset/fields/Imported__c.field-meta.xml
<CustomField>
    <fullName>Imported__c</fullName>
    <defaultValue>false</defaultValue>
    <description>11/8 SH: Created as part of Access Circuit to Asset crossover.</description>
    <label>Imported</label>
    <type>Checkbox</type>
</CustomField>