unpackaged/main/default/objects/Asset/fields/Last_Import_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Import_Date_Time__c</fullName>
    <description>11/8 SH: Created as part of Access Circuit to Asset crossover.</description>
    <label>Last Import Date/Time</label>
    <type>DateTime</type>
</CustomField>