unpackaged/main/default/objects/Asset/fields/LATA__c.field-meta.xml
<CustomField>
    <fullName>LATA__c</fullName>
    <description>11/8 SH: Created as part of Access Circuit to Asset crossover.</description>
    <label>LATA</label>
    <length>16</length>
    <type>Text</type>
</CustomField>