unpackaged/main/default/objects/Asset/fields/Node_Element_ID__c.field-meta.xml
<CustomField>
    <fullName>Node_Element_ID__c</fullName>
    <description>11/8 SH: Created as part of Access Circuit to Asset crossover.</description>
    <formula>Account.Node_Element_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Node Element ID</label>
    <type>Text</type>
</CustomField>