unpackaged/main/default/objects/Asset/fields/NPA__c.field-meta.xml
<CustomField>
    <fullName>NPA__c</fullName>
    <description>11/8 SH: Part of the Access Circuit to Asset conversion.</description>
    <label>NPA</label>
    <length>8</length>
    <type>Text</type>
</CustomField>