unpackaged/main/default/objects/Asset/fields/NXX__c.field-meta.xml
<CustomField>
    <fullName>NXX__c</fullName>
    <description>11/8 SH: Part of the Access Circuit to Asset conversion.</description>
    <label>NXX</label>
    <length>8</length>
    <type>Text</type>
</CustomField>