unpackaged/main/default/objects/Asset/fields/Primary_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Primary_Carrier__c</fullName>
    <description>11/8 SH: Part of the Access Circuit to Asset conversion.</description>
    <label>Primary Carrier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>