unpackaged/main/default/objects/Asset/fields/Primary_Carrier_Trouble_Reporting_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Carrier_Trouble_Reporting_Number__c</fullName>
    <description>11/8 SH: Part of the Access Circuit to Asset conversion.</description>
    <label>Primary Carrier Trouble Reporting Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>