unpackaged/main/default/objects/Asset/fields/Product_Code_1__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_1__c</fullName>
    <externalId>true</externalId>
    <label>Product Code 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>