unpackaged/main/default/objects/Asset/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <label>Purchase Order</label>
    <length>100</length>
    <type>Text</type>
</CustomField>