unpackaged/main/default/objects/Asset/fields/Rate_Center__c.field-meta.xml
<CustomField>
    <fullName>Rate_Center__c</fullName>
    <description>11/8 SH: Part of the Access Circuit to Asset conversion.</description>
    <label>Rate Center</label>
    <length>24</length>
    <type>Text</type>
</CustomField>