unpackaged/main/default/objects/Asset/fields/Sales_Reference__c.field-meta.xml
<CustomField>
    <fullName>Sales_Reference__c</fullName>
    <label>Sales Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>