unpackaged/main/default/objects/Asset/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <description>11/8 SH: Part of the Access Circuit to Asset conversion.</description>
    <label>State Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>