unpackaged/main/default/objects/Asset/fields/Tenant_ID__c.field-meta.xml
<CustomField>
    <fullName>Tenant_ID__c</fullName>
    <description>11/8 SH: Part of the Access Circuit to Asset conversion.</description>
    <label>Tenant ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>