unpackaged/main/default/objects/Asset/listViews/AllAssetsCommunity.listView-meta.xml
<ListView>
    <fullName>AllAssetsCommunity</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.QUANTITY</columns>
    <columns>ASSET.PURCHASE_DATE</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Assets Community</label>
    <language>en_US</language>
</ListView>